first version done

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,5 +65,12 @@ main {
     &.notWorking {
       background-color: gray;
     }
+    &.notAvailable {
+      background-color: blue;
+    }
+    &.takenByMe {
+      cursor: pointer;
+      background-color: lightgreen;
+    }
   }
 }
