polishing, small files refactor

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,69 +8,6 @@ ul {
 
 main {
   padding: 50px 120px;
-}
-
-.calendar {
   display: flex;
-  position: relative;
-}
-
-.calendar__Day {
-  border: 2px solid black;
-  width: 130px;
-  margin-left: -2px;
-}
-
-.calendar__DayNameDate {
-  text-align: center;
-  border-bottom: 2px solid black;
-  height: 70px;
-  padding-top: 10px;
-  span {
-    display: block;
-  }
-}
-
-.calendar__Hours {
-  position: absolute;
-    left: -55px;
-    top: 72px;
-    font-size: 14px;
-  li {
-    &:not(:last-child) {
-      margin-bottom: 7px;
-    }
-  }
-}
-
-.calendar__Periods {
-  li {
-    height: 25px;
-    &:not(:last-child) {
-      border-bottom: 1px solid black;
-    }
-    // &:nth-child(2n):not(:last-child) {
-    //   border-bottom: 2px solid black;
-    // }
-    &.available {
-      cursor: pointer;
-      background-color: cyan;
-    }
-    &.taken {
-      background-color: darkblue;
-    }
-    &.pause {
-      background-color: yellow;
-    }
-    &.notWorking {
-      background-color: gray;
-    }
-    &.notAvailable {
-      background-color: blue;
-    }
-    &.takenByMe {
-      cursor: pointer;
-      background-color: lightgreen;
-    }
-  }
+  justify-content: center;
 }
